--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Szia Világ!</title>
+  <title>Interaktív oldal</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello GitHub Pages 👋</h1>
-  <p>Ez az első weboldalam!</p>
+  <header>
+    <h1>Üdv a weboldalamon 👋</h1>
+    <nav>
+      <a href="#rolam">Rólam</a>
+      <a href="#kapcsolat">Kapcsolat</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="rolam">
+      <h2>Rólam</h2>
+      <p>Ez egy demo GitHub Pages oldal, ahol kattintható gomb is van.</p>
+      <button id="helloBtn">Kattints rám!</button>
+    </section>
+
+    <section id="kapcsolat">
+      <h2>Kapcsolat</h2>
+      <p>Email: pelda@pelda.hu</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Királyom</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
