--- a/index.html
+++ b/index.html
@@ -3,43 +3,44 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shop - GitHub Pages Template</title>
+  <title>Topixity Shop - Dark Theme</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     :root{
-      --accent:#06b6d4; /* türkiz */
-      --muted:#6b7280;
-      --bg:#0f172a; /* sötét fejléchez */
+      --primary:#16a34a; /* zöld akcentus */
+      --primary-dark:#065f46; /* sötétebb zöld */
+      --bg-dark:#0a0f0a; /* háttér */
+      --card:#111c11;
+      --text:#e2e8f0;
     }
-    body{font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;}
-    /* kis finomítások a termékkártyákhoz */
-    .card-shadow{box-shadow: 0 6px 18px rgba(2,6,23,0.35);} 
+    body{font-family: 'Inter', sans-serif;}
+    .card-shadow{box-shadow: 0 6px 18px rgba(0,0,0,0.45);} 
   </style>
 </head>
-<body class="bg-white text-gray-900">
+<body class="bg-[var(--bg-dark)] text-[var(--text)]">
   <!-- Header -->
-  <header class="bg-white/80 backdrop-blur-sm sticky top-0 z-40 border-b">
+  <header class="bg-[var(--card)] sticky top-0 z-40 border-b border-green-900">
     <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
       <a href="#" class="flex items-center gap-3">
-        <div class="w-10 h-10 rounded-lg bg-gradient-to-br from-sky-400 to-teal-400 flex items-center justify-center text-white font-bold">T</div>
+        <div class="w-10 h-10 rounded-lg bg-gradient-to-br from-green-400 to-green-600 flex items-center justify-center text-black font-bold">T</div>
         <div>
           <div class="font-semibold">Topixity Shop</div>
-          <div class="text-xs text-gray-500 -mt-1">Modern webáruház</div>
+          <div class="text-xs text-gray-400 -mt-1">Dark Minecraft Webshop</div>
         </div>
       </a>
 
       <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="#" class="hover:text-sky-600">Főoldal</a>
-        <a href="#products" class="hover:text-sky-600">Termékek</a>
-        <a href="#about" class="hover:text-sky-600">Rólunk</a>
-        <a href="#" class="text-sm px-4 py-2 bg-gradient-to-r from-sky-400 to-teal-400 text-white rounded-lg shadow-sm">Bejelentkezés</a>
+        <a href="#" class="hover:text-green-400">Főoldal</a>
+        <a href="#products" class="hover:text-green-400">Termékek</a>
+        <a href="#about" class="hover:text-green-400">Rólunk</a>
+        <a href="#" class="text-sm px-4 py-2 bg-green-600 hover:bg-green-500 text-white rounded-lg shadow">Bejelentkezés</a>
       </nav>
 
       <div class="md:hidden">
-        <button aria-label="menu" class="p-2 rounded-lg border">
+        <button aria-label="menu" class="p-2 rounded-lg border border-green-700">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
@@ -52,33 +53,19 @@
   <main class="max-w-6xl mx-auto px-6 pt-10 pb-20">
     <section class="grid md:grid-cols-2 gap-8 items-center">
       <div>
-        <p class="text-sm text-teal-600 font-semibold">Újdonság</p>
-        <h1 class="mt-3 text-4xl md:text-5xl font-extrabold leading-tight">Stílusos és modern webáruház sablon</h1>
-        <p class="mt-4 text-gray-600 max-w-xl">Ez a sablon a megadott oldal stílusából inspirálódott: nagy hőskép, tiszta termékkártyák és élénk akcentusszínek. Használd GitHub Pages-re, vagy alakítsd tovább React / Next.js projekthez.</p>
+        <p class="text-sm text-green-400 font-semibold">Minecraft Stílus</p>
+        <h1 class="mt-3 text-4xl md:text-5xl font-extrabold leading-tight text-white">Sötétzöld Webshop Sablon</h1>
+        <p class="mt-4 text-gray-400 max-w-xl">A sablon hasonló a Topixity oldal stílusához: sötét háttér, zöld akcentus, letisztult kártyák. Használd GitHub Pages-re, vagy bővítsd tovább.</p>
 
         <div class="mt-6 flex gap-4">
-          <a href="#products" class="inline-flex items-center gap-2 px-5 py-3 rounded-lg bg-gradient-to-r from-sky-500 to-teal-400 text-white font-medium shadow-lg">Vásárlás</a>
-          <a href="#about" class="inline-flex items-center gap-2 px-5 py-3 rounded-lg border border-gray-200 text-gray-700">Tudj meg többet</a>
-        </div>
-
-        <div class="mt-8 flex items-center gap-6 text-sm text-gray-600">
-          <div class="flex items-center gap-3">
-            <img src="https://picsum.photos/seed/review1/48/48" alt="" class="w-10 h-10 rounded-full" />
-            <div>
-              <div class="font-semibold">5.0</div>
-              <div class="text-xs">(423 értékelés)</div>
-            </div>
-          </div>
-
-          <div class="h-6 w-px bg-gray-200"></div>
-
-          <div class="text-sm">Ingyenes szállítás 10 000 Ft felett</div>
+          <a href="#products" class="inline-flex items-center gap-2 px-5 py-3 rounded-lg bg-green-600 hover:bg-green-500 text-white font-medium shadow-lg">Vásárlás</a>
+          <a href="#about" class="inline-flex items-center gap-2 px-5 py-3 rounded-lg border border-green-600 text-green-400">Tudj meg többet</a>
         </div>
       </div>
 
       <div class="relative">
-        <div class="rounded-2xl overflow-hidden card-shadow">
-          <img src="https://picsum.photos/seed/hero/900/700" alt="hero" class="w-full h-[420px] object-cover" />
+        <div class="rounded-2xl overflow-hidden card-shadow border border-green-900">
+          <img src="https://picsum.photos/seed/greenhero/900/700" alt="hero" class="w-full h-[420px] object-cover" />
         </div>
       </div>
     </section>
@@ -86,123 +73,55 @@
     <!-- Products -->
     <section id="products" class="mt-16">
       <div class="flex items-center justify-between">
-        <h2 class="text-2xl font-semibold">Népszerű termékek</h2>
-        <div class="text-sm text-gray-500">Mutatva 1–8/32</div>
+        <h2 class="text-2xl font-semibold text-green-400">Népszerű termékek</h2>
+        <div class="text-sm text-gray-500">Mutatva 1–4/32</div>
       </div>
 
       <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-        <!-- Product Card x8 (példa) -->
-        <!-- Repeatable card -->
-        <article class="bg-white border rounded-xl p-4 card-shadow">
-          <img src="https://picsum.photos/seed/p1/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
+        <article class="bg-[var(--card)] border border-green-900 rounded-xl p-4 card-shadow">
+          <img src="https://picsum.photos/seed/g1/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
           <div class="mt-3">
-            <h3 class="font-semibold text-lg">Stílusos fülhallgató</h3>
-            <p class="text-sm text-gray-500 mt-1">Vezeték nélküli, hosszú üzemidő</p>
+            <h3 class="font-semibold text-lg text-white">Ultimate Rank</h3>
+            <p class="text-sm text-gray-400 mt-1">90 napos hozzáférés</p>
             <div class="mt-3 flex items-center justify-between">
-              <div>
-                <div class="font-bold">19 990 Ft</div>
-                <div class="text-xs text-gray-400 line-through">24 990 Ft</div>
-              </div>
-              <button class="px-3 py-2 bg-teal-500 text-white rounded-lg text-sm">Kosárba</button>
+              <div class="font-bold text-green-400">3 990 Ft</div>
+              <button class="px-3 py-2 bg-green-600 hover:bg-green-500 text-white rounded-lg text-sm">Kosárba</button>
             </div>
           </div>
         </article>
 
-        <article class="bg-white border rounded-xl p-4 card-shadow">
-          <img src="https://picsum.photos/seed/p2/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
+        <article class="bg-[var(--card)] border border-green-900 rounded-xl p-4 card-shadow">
+          <img src="https://picsum.photos/seed/g2/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
           <div class="mt-3">
-            <h3 class="font-semibold text-lg">Minimal táska</h3>
-            <p class="text-sm text-gray-500 mt-1">Vízlepergető, városi dizájn</p>
+            <h3 class="font-semibold text-lg text-white">VIP Rank</h3>
+            <p class="text-sm text-gray-400 mt-1">30 napos prémium</p>
             <div class="mt-3 flex items-center justify-between">
-              <div>
-                <div class="font-bold">8 490 Ft</div>
-              </div>
-              <button class="px-3 py-2 bg-teal-500 text-white rounded-lg text-sm">Kosárba</button>
+              <div class="font-bold text-green-400">1 990 Ft</div>
+              <button class="px-3 py-2 bg-green-600 hover:bg-green-500 text-white rounded-lg text-sm">Kosárba</button>
             </div>
           </div>
         </article>
 
-        <article class="bg-white border rounded-xl p-4 card-shadow">
-          <img src="https://picsum.photos/seed/p3/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
+        <article class="bg-[var(--card)] border border-green-900 rounded-xl p-4 card-shadow">
+          <img src="https://picsum.photos/seed/g3/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
           <div class="mt-3">
-            <h3 class="font-semibold text-lg">Okosóra</h3>
-            <p class="text-sm text-gray-500 mt-1">Pulzusmérés, üzemidő 7 nap</p>
+            <h3 class="font-semibold text-lg text-white">Kit Starter</h3>
+            <p class="text-sm text-gray-400 mt-1">Hasznos tárgyak kezdőknek</p>
             <div class="mt-3 flex items-center justify-between">
-              <div>
-                <div class="font-bold">29 990 Ft</div>
-              </div>
-              <button class="px-3 py-2 bg-teal-500 text-white rounded-lg text-sm">Kosárba</button>
+              <div class="font-bold text-green-400">990 Ft</div>
+              <button class="px-3 py-2 bg-green-600 hover:bg-green-500 text-white rounded-lg text-sm">Kosárba</button>
             </div>
           </div>
         </article>
 
-        <article class="bg-white border rounded-xl p-4 card-shadow">
-          <img src="https://picsum.photos/seed/p4/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
+        <article class="bg-[var(--card)] border border-green-900 rounded-xl p-4 card-shadow">
+          <img src="https://picsum.photos/seed/g4/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
           <div class="mt-3">
-            <h3 class="font-semibold text-lg">Asztali lámpa</h3>
-            <p class="text-sm text-gray-500 mt-1">Állítható fényerő, USB-C</p>
+            <h3 class="font-semibold text-lg text-white">Boost XP</h3>
+            <p class="text-sm text-gray-400 mt-1">Dupla XP 7 napig</p>
             <div class="mt-3 flex items-center justify-between">
-              <div>
-                <div class="font-bold">5 490 Ft</div>
-              </div>
-              <button class="px-3 py-2 bg-teal-500 text-white rounded-lg text-sm">Kosárba</button>
-            </div>
-          </div>
-        </article>
-
-        <!-- more cards can be copied -->
-        <article class="bg-white border rounded-xl p-4 card-shadow">
-          <img src="https://picsum.photos/seed/p5/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
-          <div class="mt-3">
-            <h3 class="font-semibold text-lg">Vízálló hátizsák</h3>
-            <p class="text-sm text-gray-500 mt-1">Nagy belső tér, laptop rekesz</p>
-            <div class="mt-3 flex items-center justify-between">
-              <div>
-                <div class="font-bold">12 990 Ft</div>
-              </div>
-              <button class="px-3 py-2 bg-teal-500 text-white rounded-lg text-sm">Kosárba</button>
-            </div>
-          </div>
-        </article>
-
-        <article class="bg-white border rounded-xl p-4 card-shadow">
-          <img src="https://picsum.photos/seed/p6/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
-          <div class="mt-3">
-            <h3 class="font-semibold text-lg">Vezeték nélküli töltő</h3>
-            <p class="text-sm text-gray-500 mt-1">Gyors töltés, kis helyen</p>
-            <div class="mt-3 flex items-center justify-between">
-              <div>
-                <div class="font-bold">6 990 Ft</div>
-              </div>
-              <button class="px-3 py-2 bg-teal-500 text-white rounded-lg text-sm">Kosárba</button>
-            </div>
-          </div>
-        </article>
-
-        <article class="bg-white border rounded-xl p-4 card-shadow">
-          <img src="https://picsum.photos/seed/p7/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
-          <div class="mt-3">
-            <h3 class="font-semibold text-lg">Hordozható hangszóró</h3>
-            <p class="text-sm text-gray-500 mt-1">Bluetooth 5.0, erős basszus</p>
-            <div class="mt-3 flex items-center justify-between">
-              <div>
-                <div class="font-bold">11 490 Ft</div>
-              </div>
-              <button class="px-3 py-2 bg-teal-500 text-white rounded-lg text-sm">Kosárba</button>
-            </div>
-          </div>
-        </article>
-
-        <article class="bg-white border rounded-xl p-4 card-shadow">
-          <img src="https://picsum.photos/seed/p8/600/400" alt="termek" class="w-full h-44 object-cover rounded-md" />
-          <div class="mt-3">
-            <h3 class="font-semibold text-lg">USB-C kábel</h3>
-            <p class="text-sm text-gray-500 mt-1">Tartós, gyors töltés</p>
-            <div class="mt-3 flex items-center justify-between">
-              <div>
-                <div class="font-bold">990 Ft</div>
-              </div>
-              <button class="px-3 py-2 bg-teal-500 text-white rounded-lg text-sm">Kosárba</button>
+              <div class="font-bold text-green-400">490 Ft</div>
+              <button class="px-3 py-2 bg-green-600 hover:bg-green-500 text-white rounded-lg text-sm">Kosárba</button>
             </div>
           </div>
         </article>
@@ -210,61 +129,47 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="mt-16 bg-gradient-to-r from-slate-50 to-white rounded-xl p-8">
-      <div class="md:flex md:items-center md:gap-8">
-        <div class="md:w-1/2">
-          <h3 class="text-2xl font-semibold">Rólunk</h3>
-          <p class="mt-3 text-gray-600">Egyszerű, gyors és barátságos webáruház. Ez a sablon demonstrálja a hasonló elrendezést: nagy képi világ, rendezett termékek és könnyű navigáció.</p>
-          <ul class="mt-4 text-sm text-gray-600 space-y-2">
-            <li>• Reszponzív design — mobilon és asztalin jól néz ki</li>
-            <li>• Könnyen testreszabható Tailwinddel</li>
-            <li>• GitHub Pages kompatibilis (egyszerű index.html feltöltés)</li>
-          </ul>
-        </div>
-        <div class="md:w-1/2 mt-6 md:mt-0">
-          <img src="https://picsum.photos/seed/about/800/500" alt="about" class="rounded-lg w-full object-cover" />
-        </div>
-      </div>
+    <section id="about" class="mt-16 bg-[var(--card)] rounded-xl p-8 border border-green-900">
+      <h3 class="text-2xl font-semibold text-green-400">Rólunk</h3>
+      <p class="mt-3 text-gray-400">Ez a webshop sablon sötétzöld témában készült, Minecraft szerverekhez hasonló hangulattal. Teljesen reszponzív, GitHub Pages kompatibilis és Tailwind CSS-el könnyen szerkeszthető.</p>
     </section>
-
   </main>
 
   <!-- Footer -->
-  <footer class="bg-slate-900 text-slate-200 py-10">
+  <footer class="bg-black text-gray-400 py-10 border-t border-green-900">
     <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
       <div>
         <div class="flex items-center gap-3 mb-3">
-          <div class="w-10 h-10 rounded-lg bg-gradient-to-br from-sky-400 to-teal-400 flex items-center justify-center text-white font-bold">T</div>
+          <div class="w-10 h-10 rounded-lg bg-gradient-to-br from-green-400 to-green-600 flex items-center justify-center text-black font-bold">T</div>
           <div>
-            <div class="font-semibold">Topixity Shop</div>
-            <div class="text-xs text-slate-400">Modern webáruház</div>
+            <div class="font-semibold text-white">Topixity Shop</div>
+            <div class="text-xs text-gray-500">Minecraft Webshop</div>
           </div>
         </div>
-        <p class="text-sm text-slate-400">Kapcsolat: info@topixity.hu</p>
+        <p class="text-sm">Kapcsolat: info@topixity.hu</p>
       </div>
 
       <div>
-        <h4 class="font-semibold">Gyors linkek</h4>
-        <ul class="mt-3 text-sm text-slate-400 space-y-2">
-          <li><a href="#" class="hover:text-white">Szállítás</a></li>
-          <li><a href="#" class="hover:text-white">Visszaküldés</a></li>
-          <li><a href="#" class="hover:text-white">Adatvédelem</a></li>
+        <h4 class="font-semibold text-white">Hasznos linkek</h4>
+        <ul class="mt-3 text-sm space-y-2">
+          <li><a href="#" class="hover:text-green-400">Szállítás</a></li>
+          <li><a href="#" class="hover:text-green-400">Visszaküldés</a></li>
+          <li><a href="#" class="hover:text-green-400">Adatvédelem</a></li>
         </ul>
       </div>
 
       <div>
-        <h4 class="font-semibold">Iratkozz fel</h4>
-        <p class="text-sm text-slate-400 mt-2">Kedvezmények és újdonságok e-mailben.</p>
+        <h4 class="font-semibold text-white">Iratkozz fel</h4>
+        <p class="text-sm mt-2">Kedvezmények és újdonságok e-mailben.</p>
         <form class="mt-4 flex gap-2">
-          <input type="email" placeholder="E-mail" class="px-3 py-2 rounded-lg w-full text-slate-900" />
-          <button class="px-4 py-2 rounded-lg bg-teal-500 text-white">Feliratkozás</button>
+          <input type="email" placeholder="E-mail" class="px-3 py-2 rounded-lg w-full text-black" />
+          <button class="px-4 py-2 rounded-lg bg-green-600 hover:bg-green-500 text-white">Feliratkozás</button>
         </form>
       </div>
     </div>
 
-    <div class="max-w-6xl mx-auto px-6 mt-8 text-xs text-slate-500">© 2025 Topixity Shop. Minden jog fenntartva.</div>
+    <div class="max-w-6xl mx-auto px-6 mt-8 text-xs text-gray-600">© 2025 Topixity Shop. Minden jog fenntartva.</div>
   </footer>
 
 </body>
 </html>
-
