--- a/balushop.html
+++ b/balushop.html
@@ -24,8 +24,9 @@ body {
 </div>
 
 <!-- Kép a középen, alul -->
-<img src="https://raw.githubusercontent.com/ggmate1944/balushop-web/main/webimegine/balushop.png" alt="BaluShop kép" class="mt-auto mb-4 w-64">
+<img src="https://raw.githubusercontent.com/ggmate1944/.github/workflows/main/webimegine/balushop.png" alt="BaluShop kép" class="mt-auto mb-4 w-64">
 
 </body>
 </html>
+
 
