--- a/balushop.html
+++ b/balushop.html
@@ -24,10 +24,11 @@ body {
 </div>
 
 <!-- Kép a középen, alul -->
-<img src="webimagine/balushop.png alt="BaluShop kép" class="mt-auto mb-4 w-64">
+<img src="webimagine/balushop.png" alt="BaluShop kép" class="mt-auto mb-4 w-64">
 
 </body>
 </html>
+
 
 
 
