Move shops under shops folder

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ to { opacity: 1; transform: translateY(0); }
 
 
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 w-11/12 md:w-2/3">
-<a href="balushop.html" class="shop-btn rounded-2xl p-8 text-center text-xl font-semibold text-green-200">Balushop</a>
-<a href="ermeshop.html" class="shop-btn rounded-2xl p-8 text-center text-xl font-semibold text-green-200">Ermeshop</a>
-<a href="tekishop.html" class="shop-btn rounded-2xl p-8 text-center text-xl font-semibold text-green-200">Tekishop</a>
+<a href="shops/balushop.html" class="shop-btn rounded-2xl p-8 text-center text-xl font-semibold text-green-200">Balushop</a>
+<a href="shops/ermeshop.html" class="shop-btn rounded-2xl p-8 text-center text-xl font-semibold text-green-200">Ermeshop</a>
+<a href="shops/tekishop.html" class="shop-btn rounded-2xl p-8 text-center text-xl font-semibold text-green-200">Tekishop</a>
 </div>
 
 
