Add more shops.

--- a/shops/almashop.html
+++ b/shops/almashop.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tekishop</title>
+<title>Almashop</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
 body { 
@@ -14,16 +14,16 @@ body {
 </head>
 <body class="flex flex-col items-center min-h-screen text-center p-10">
 
-<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Tekishop</h1>
+<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Almashop</h1>
 
 <!-- Kép a cím után -->
-<img src="../webimagine/tekishop.png" alt="Tekishop kép" class="mb-10 w-120 rounded-xl shadow-lg">
+<img src="../webimagine/almashop.png" alt="Tekishop kép" class="mb-10 w-120 rounded-xl shadow-lg">
 
 <!-- Leírás szép formázva -->
 <div class="mt-4 space-y-3 text-lg leading-relaxed">
-  <p><strong>Kordi:</strong> 207 68 13</p>
+  <p><strong>Kordi:</strong> -48 65 62</p>
   <p><strong>Leírás:</strong> xyz</p>
-  <p><strong>Tulaj:</strong> Porba</p>
+  <p><strong>Tulaj:</strong> TheAlma</p>
   <p><strong>Ár folyam:</strong> 1 - 6k</p>
 </div>
 
