--- a/shops/balushop.html
+++ b/shops/balushop.html
@@ -14,24 +14,18 @@ body {
 </head>
 <body class="flex flex-col items-center min-h-screen text-center p-10">
 
-<h1 class="text-5xl font-bold text-green-400 mb-8 mt-4">Balushop</h1>
+<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">BaluShop</h1>
 
-<div class="mt-10">
-    <p><strong>Kordi:</strong> xyz</p>
-    <p><strong>Leírás:</strong> xyz</p>
-    <p><strong>Tulaj:</strong> xyz</p>
-    <p><strong>Ár folyam:</strong> x-y</p>
+<!-- Kép a cím után -->
+<img src="../webimagine/balushop.png" alt="Balushop kép" class="mb-10 w-120 rounded-xl shadow-lg">
+
+<!-- Leírás szép formázva -->
+<div class="mt-4 space-y-3 text-lg leading-relaxed">
+    <p><strong>Kordi:</strong> -48 66 24</p>
+    <p><strong>Leírás:</strong> xyzq</p>
+    <p><strong>Tulaj:</strong> Balu613749</p>
+    <p><strong>Ár folyam:</strong> 1.5 - 50k</p>
 </div>
-
-<!-- Kép a középen, alul -->
-<img src="../webimagine/balushop.png" alt="BaluShop kép" class="mt-auto mb-4 w-64">
 
 </body>
 </html>
-
-
-
-
-
-
-
