--- a/shops/ermeshop.html
+++ b/shops/ermeshop.html
@@ -5,16 +5,27 @@
 <title>Ermeshop</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
-body { background: linear-gradient(135deg, #0a0f0a, #1a3d1a); color: #d4ffd4; font-family: 'Segoe UI', sans-serif; }
+body { 
+  background: linear-gradient(135deg, #0a0f0a, #1a3d1a); 
+  color: #d4ffd4; 
+  font-family: 'Segoe UI', sans-serif; 
+}
 </style>
 </head>
 <body class="flex flex-col items-center min-h-screen text-center p-10">
-<h1 class="text-5xl font-bold text-green-400 mb-8 mt-4">Ermeshop</h1>
-<div class="mt-10">
-<p><strong>Kordi:</strong> xyz</p>
-<p><strong>Leírás:</strong> xyz</p>
-<p><strong>Tulaj:</strong> xyz</p>
-<p><strong>Ár folyam:</strong> x-y</p>
+
+<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Ermeshop</h1>
+
+<!-- Kép a cím után -->
+<img src="../webimagine/ermeshop.png" alt="Ermeshop kép" class="mb-10 w-120 rounded-xl shadow-lg">
+
+<!-- Leírás szép formázva -->
+<div class="mt-4 space-y-3 text-lg leading-relaxed">
+  <p><strong>Kordi:</strong> -43 66 -34</p>
+  <p><strong>Leírás:</strong> xyz</p>
+  <p><strong>Tulaj:</strong> MrKopek, Fikuszkukisz</p>
+  <p><strong>Ár folyam:</strong> 3 - 50k</p>
 </div>
+
 </body>
 </html>
