--- a/shops/porbashop.html
+++ b/shops/porbashop.html
@@ -1,8 +1,9 @@
+
 <html lang="hu">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tekishop</title>
+<title>Porbashop</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
 body { 
@@ -14,10 +15,10 @@ body {
 </head>
 <body class="flex flex-col items-center min-h-screen text-center p-10">
 
-<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Tekishop</h1>
+<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Porbashop</h1>
 
 <!-- Kép a cím után -->
-<img src="../webimagine/tekishop.png" alt="Tekishop kép" class="mb-10 w-120 rounded-xl shadow-lg">
+<img src="../webimagine/porbashop.png" alt="Porbashop kép" class="mb-10 w-120 rounded-xl shadow-lg">
 
 <!-- Leírás szép formázva -->
 <div class="mt-4 space-y-3 text-lg leading-relaxed">
