--- a/shops/hordoshop.html
+++ b/shops/hordoshop.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tekishop</title>
+<title>Hordóshop</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
 body { 
@@ -14,17 +14,17 @@ body {
 </head>
 <body class="flex flex-col items-center min-h-screen text-center p-10">
 
-<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Tekishop</h1>
+<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Hordóshop</h1>
 
 <!-- Kép a cím után -->
-<img src="../webimagine/tekishop.png" alt="Tekishop kép" class="mb-10 w-120 rounded-xl shadow-lg">
+<img src="../webimagine/hordoshop.png" alt="Hordóshop kép" class="mb-10 w-120 rounded-xl shadow-lg">
 
 <!-- Leírás szép formázva -->
 <div class="mt-4 space-y-3 text-lg leading-relaxed">
-  <p><strong>Kordi:</strong> -183 109 -266</p>
-  <p><strong>Leírás:</strong> Minden féle tengeri cuc van teki sapi,nautilusz,tengerszive,armortrimek lesd meg</p>
-  <p><strong>Tulaj:</strong> WarlikesJewel</p>
-  <p><strong>Ár folyam:</strong> 1 - 10k</p>
+  <p><strong>Kordi:</strong> 290 64 31</p>
+  <p><strong>Leírás:</strong> xyz</p>
+  <p><strong>Tulaj:</strong> Mr_Koala</p>
+  <p><strong>Ár folyam:</strong> 2 - 1.5k</p>
 </div>
 
 </body>
