--- a/shops/teoshop.html
+++ b/shops/teoshop.html
@@ -14,17 +14,19 @@ body {
 </head>
 <body class="flex flex-col items-center min-h-screen text-center p-10">
 
-<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Tekishop</h1>
+<h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Teoshop</h1>
 
 <!-- Kép a cím után -->
-<img src="../webimagine/tekishop.png" alt="Tekishop kép" class="mb-10 w-120 rounded-xl shadow-lg">
+<img src="../webimagine/teoshop.png" alt="TeoShop kép" class="mb-10 w-120 rounded-xl shadow-lg">
 
 <!-- Leírás szép formázva -->
 <div class="mt-4 space-y-3 text-lg leading-relaxed">
-  <p><strong>Kordi:</strong> -183 109 -266</p>
-  <p><strong>Leírás:</strong> Minden féle tengeri cuc van teki sapi,nautilusz,tengerszive,armortrimek lesd meg</p>
-  <p><strong>Tulaj:</strong> WarlikesJewel</p>
-  <p><strong>Ár folyam:</strong> 1 - 10k</p>
+  <p><strong>Kordi:</strong> -2200 64 -90 </p>
+  <p><strong>Leírás:</strong> Ez egy olcsó shop, inkább megrendelésre szerzek be dolgot mint nedi szett,</p> 
+</p>fejlesztő, vagy gyémánt</p>
+</p>De van most mace meg netherite felszerelés is </p>
+  <p><strong>Tulaj:</strong> TeoKingOfWar</p>
+  <p><strong>Ár folyam:</strong> 2 - 40k</p>
 </div>
 
 </body>
