--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
 body {
-background: linear-gradient(135deg, #0a0f0a, #1a3d1a);
+background: linear-gradient(135deg, #000000, #21ac21);
 color: #d4ffd4;
 font-family: 'Segoe UI', sans-serif;
 }
@@ -28,6 +28,8 @@ to { opacity: 1; transform: translateY(0); }
 </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen fade-in">
+
+<img src="webimagine/topix.png" alt="Logo" class="mx-auto mb-6 w-32">
 
 
 <h1 class="text-4xl font-bold text-green-400 mb-10 text-center">Válassz Shopot</h1>
