--- a/shops/almashop.html
+++ b/shops/almashop.html
@@ -14,7 +14,7 @@ body {
   position: fixed;
   top: 15px;
   left: 20px;
-  font-size: 28px;
+  font-size: 64px;
   font-weight: bold;
   color: #ff6666;
   text-decoration: none;
@@ -24,24 +24,78 @@ body {
   color: #ff0000;
   transform: scale(1.2);
 }
+.vote-btn {
+  background: linear-gradient(135deg, #1a3d1a, #2f6e2f);
+  padding: 12px 24px;
+  border-radius: 12px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #d4ffd4;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+.vote-btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px #2f6e2f;
+}
+.vote-btn:disabled {
+  background: #444;
+  cursor: not-allowed;
+  box-shadow: none;
+}
 </style>
 </head>
 <body class="flex flex-col items-center min-h-screen text-center p-10">
 
-     <a href="../index.html" class="close-btn">&times;</a>  
+<a href="../index.html" class="close-btn">&times;</a>  
 
 <h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">Almashop</h1>
 
 <!-- Kép a cím után -->
 <img src="../webimagine/almashop.png" alt="Tekishop kép" class="mb-10 w-120 rounded-xl shadow-lg">
 
-<!-- Leírás szép formázva -->
+<!-- Leírás -->
 <div class="mt-4 space-y-3 text-lg leading-relaxed">
   <p><strong>Kordi:</strong> -48 65 62</p>
   <p><strong>Leírás:</strong> xyz</p>
   <p><strong>Tulaj:</strong> TheAlma</p>
   <p><strong>Ár folyam:</strong> 1 - 6k</p>
 </div>
+
+<!-- Szavazás -->
+<div class="mt-10">
+  <button id="voteBtn" onclick="vote()" class="vote-btn">Szavazok</button>
+  <p id="voteCount" class="mt-4 text-xl">Szavazatok: 0</p>
+</div>
+
+<script>
+let votes = localStorage.getItem("almashopVotes") ? parseInt(localStorage.getItem("almashopVotes")) : 0;
+let hasVoted = localStorage.getItem("almashopHasVoted") === "true";
+
+// Frissítjük a szavazatok kijelzését
+document.getElementById("voteCount").innerText = "Szavazatok: " + votes;
+
+// Ha már szavazott, tiltjuk a gombot
+if (hasVoted) {
+  document.getElementById("voteBtn").disabled = true;
+  document.getElementById("voteBtn").innerText = "Már szavaztál";
+}
+
+function vote() {
+  if (!hasVoted) {
+    votes++;
+    hasVoted = true;
+
+    // Mentés localStorage-be
+    localStorage.setItem("babrashopVotes", votes);
+    localStorage.setItem("babrashopHasVoted", true);
+
+    // Frissítés a képernyőn
+    document.getElementById("voteCount").innerText = "Szavazatok: " + votes;
+    document.getElementById("voteBtn").disabled = true;
+    document.getElementById("voteBtn").innerText = "Már szavaztál";
+  }
+}
+</script>
 
 </body>
 </html>
