--- a/shops/porbashop.html
+++ b/shops/porbashop.html
@@ -15,7 +15,7 @@ body {
   position: fixed;
   top: 15px;
   left: 20px;
-  font-size: 28px;
+  font-size: 64px;
   font-weight: bold;
   color: #ff6666;
   text-decoration: none;
@@ -24,6 +24,24 @@ body {
 .close-btn:hover {
   color: #ff0000;
   transform: scale(1.2);
+}
+.vote-btn {
+  background: linear-gradient(135deg, #1a3d1a, #2f6e2f);
+  padding: 12px 24px;
+  border-radius: 12px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #d4ffd4;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+.vote-btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px #2f6e2f;
+}
+.vote-btn:disabled {
+  background: #444;
+  cursor: not-allowed;
+  box-shadow: none;
 }
 </style>
 </head>
@@ -42,7 +60,41 @@ body {
   <p><strong>Leírás:</strong> xyz</p>
   <p><strong>Tulaj:</strong> Porba</p>
   <p><strong>Ár folyam:</strong> 1 - 6k</p>
+<!-- Szavazás -->
+<div class="mt-10">
+  <button id="voteBtn" onclick="vote()" class="vote-btn">Szavazok</button>
+  <p id="voteCount" class="mt-4 text-xl">Szavazatok: 0</p>
 </div>
+
+<script>
+let votes = localStorage.getItem("porbashopVotes") ? parseInt(localStorage.getItem("porbashopVotes")) : 0;
+let hasVoted = localStorage.getItem("porbashopHasVoted") === "true";
+
+// Frissítjük a szavazatok kijelzését
+document.getElementById("voteCount").innerText = "Szavazatok: " + votes;
+
+// Ha már szavazott, tiltjuk a gombot
+if (hasVoted) {
+  document.getElementById("voteBtn").disabled = true;
+  document.getElementById("voteBtn").innerText = "Már szavaztál";
+}
+
+function vote() {
+  if (!hasVoted) {
+    votes++;
+    hasVoted = true;
+
+    // Mentés localStorage-be
+    localStorage.setItem("porbashopVotes", votes);
+    localStorage.setItem("porbashopHasVoted", true);
+
+    // Frissítés a képernyőn
+    document.getElementById("voteCount").innerText = "Szavazatok: " + votes;
+    document.getElementById("voteBtn").disabled = true;
+    document.getElementById("voteBtn").innerText = "Már szavaztál";
+  }
+}
+</script>
 
 </body>
 </html>
